--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,20 @@ body {
   margin: 20px;
 }
 
+
+.board-row{
+  color: red;
+  background-color: black;
+  height: 20%;
+}
+
+#root{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 75vh;
+}
+
 ol, ul {
   padding-left: 30px;
 }
