--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,10 @@ ol, ul {
   padding-left: 30px;
 }
 
+.strikethrough{
+  text-decoration: line-through
+}
+
 .board-row:after {
   clear: both;
   content: "";
